Adding post view and extend the User model and update models and templates/includes

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -8,15 +8,11 @@
     <meta name="description" content="This is meta description">
     <meta name="author" content="Themefisher">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Mulish:wght@500;600;700;800;900&amp;display=swap" media="all">
-    <link rel="stylesheet" href="static/css/style.css">
+    <link rel="stylesheet" href="/static/css/style.min.css">
     {% block head %}
     {% endblock %}
 </head>
 <body>
-    <div class="preloader" style="display: hidden;"></div>
-    
-    <div class="header-height-fix"></div>
-    
     {% include './includes/header.html' %}
     
     {% include './includes/search.html' %}
