--- a/blog/templates/blog/includes/footer.html
+++ b/blog/templates/blog/includes/footer.html
@@ -19,10 +19,10 @@
             </div>
             <div class="col-lg-12 text-center mt-5">
                 <ul class="list-inline footer-menu mb-4">
-                    <li class="list-inline-item mx-3"><a href="#">About</a></li>
-                    <li class="list-inline-item mx-3"><a href="#">Contact</a></li>
-                    <li class="list-inline-item mx-3"><a href="#">Privacy</a></li>
-                    <li class="list-inline-item mx-3"><a href="#">Terms &amp; Conditions</a></li>
+                    <li class="list-inline-item mx-3"><a href="/about/">About</a></li>
+                    <li class="list-inline-item mx-3"><a href="/contact/">Contact</a></li>
+                    <li class="list-inline-item mx-3"><a href="/privacy/">Privacy</a></li>
+                    <li class="list-inline-item mx-3"><a href="/terms-and-conditions/">Terms &amp; Conditions</a></li>
                 </ul>
                 <p class="mb-0 font-weight-500 copyright-text content">© Copyright by Orión B</p>
             </div>
