--- a/blog/templates/blog/includes/header.html
+++ b/blog/templates/blog/includes/header.html
@@ -41,7 +41,7 @@
                                     <a class="dropdown-item" href="#">Architecture</a>
                                     <a class="dropdown-item" href="#">Book reviews</a>
                                     <a class="dropdown-item" href="#">Design patterns</a>
-                                    <a class="dropdown-item" href="#">Tutorials & Guides</a>
+                                    <a class="dropdown-item" href="#">Guides & Tutorials</a>
                                     <a class="dropdown-item" href="/category/">Go to Categories</a>
                                 </div>
                             </li>
@@ -53,9 +53,9 @@
                                     Other
                                 </a>
                                 <div class="dropdown-menu">
-                                    <a class="dropdown-item" href="#">Authors</a>
-                                    <a class="dropdown-item" href="#">Privacy</a>
-                                    <a class="dropdown-item" href="#">Terms & Conditions</a>
+                                    <a class="dropdown-item" href="/authors/">Authors</a>
+                                    <a class="dropdown-item" href="/privacy/">Privacy</a>
+                                    <a class="dropdown-item" href="/terms-and-conditions/">Terms & Conditions</a>
                                 </div>
                             </li>
                         </ul>
@@ -76,3 +76,4 @@
         </div>
     </div>
 </header>
+<br><br><br><br>
