--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,6 +1,7 @@
 {% extends './base.html' %}
 
 {% block head %}
+	<title> {{ object.title }} 	- Blog</title>
 {% endblock %}
 
 {% block content %}
@@ -11,52 +12,39 @@
 					<div class="col-lg-9">
 						<div class="pr-lg-4">
 							<div class="text-center mb-5">
-								<h2 class="h3 mb-4 post-title">What you need to know about Photography</h2>
+								<h2 class="h3 mb-4 post-title">{{ object.title }}</h2>
 								<ul class="card-meta list-inline">
 									<li class="list-inline-item">
 										<a href="https://demo.gethugothemes.com/bookworm/site/author/lubana-era/" class="card-meta-author">
-											<img loading="lazy" decoding="async" src="/bookworm/site/images/author/author_hu376e72e235c9199766cd0ec2291cc5fb_3167_26x26_resize_q90_h2_box.webp" alt="Lubana Era" class="img-fluid" width="26" height="26" onerror="this.onerror='null',this.src='/bookworm/site/images/author/author_hu376e72e235c9199766cd0ec2291cc5fb_3167_26x26_resize_q90_box.jpg'">
-											<span>Lubana Era</span>
+											<img loading="lazy" decoding="async" src="/uploads/{{ object.author.profile.image }}" alt="Lubana Era" class="img-fluid" width="26" height="26" onerror="this.onerror='null',this.src='/bookworm/site/images/author/author_hu376e72e235c9199766cd0ec2291cc5fb_3167_26x26_resize_q90_box.jpg'">
+											<span>{{ object.author }}</span>
 										</a>
 									</li>
 									<li class="list-inline-item">|</li>
 									<li class="list-inline-item">
-										<span>04 February 2021</span>
+										<span>{{ object.datetime }}</span>
 									</li>
 								</ul>
 							</div>
 							<div class="mb-5">
 								<div class="post-slider rounded slick-initialized slick-slider">
 									<div class="slick-list draggable">
-										<div class="slick-track" style="opacity: 1; width: 967px; transform: translate3d(0px, 0px, 0px);">
-											<picture class="slick-slide slick-current slick-active" data-slick-index="0" aria-hidden="false" tabindex="0" style="width: 967px;">
-												<source srcset="/bookworm/site/images/post/02_hu2ae383fe1319764169dba9e9a81bc264_12510_545x0_resize_q90_h2_box.webp" media="(max-width: 575px)">
-												<source srcset="/bookworm/site/images/post/02_hu2ae383fe1319764169dba9e9a81bc264_12510_600x0_resize_q90_h2_box.webp" media="(max-width: 767px)">
-												<source srcset="/bookworm/site/images/post/02_hu2ae383fe1319764169dba9e9a81bc264_12510_700x0_resize_q90_h2_box.webp" media="(max-width: 991px)">
-												<source srcset="/bookworm/site/images/post/02_hu2ae383fe1319764169dba9e9a81bc264_12510_1110x0_resize_q90_h2_box.webp">
-												<img loading="lazy" decoding="async" class="w-100 h-auto" src="/bookworm/site/images/post/02_hu2ae383fe1319764169dba9e9a81bc264_12510_1110x0_resize_q90_box.jpg" alt="post-thumb" width="970" height="500">
-											</picture>
+										<div class="slick-track">
+											<img loading="lazy" decoding="async" class="w-100 h-auto" src="/uploads/{{ object.image }}" alt="post-thumb" width="970" height="500">
 										</div>
 									</div>
 								</div>
 							</div>
 							<div class="content">
-								<p>Photography is an invaluable medium that allows us to capture the incandescent beauty of the outside world, something many of us haven’t seen in… well, a hot minute. Global pandemics will do that.</p>
-								<p>But that certainly doesn’t mean that beautiful photos can’t be taken indoors, out of windows, or in secluded outdoor locations (safely socially distanced, of course). And perhaps now is as good a time as any to gain some helpful
-									tips on how to do just that by taking an online photography course.</p>
-								<h3 id="creative-design">Creative Design</h3>
-								<p>Nam ut rutrum ex, venenatis sollicitudin urna. Aliquam erat volutpat. Integer eu ipsum sem. Ut bibendum lacus vestibulum maximus suscipit. Quisque vitae nibh iaculis neque blandit euismod.</p>
-								<blockquote>
-									<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo vel ad consectetur ut aperiam. Itaque eligendi natus aperiam? Excepturi repellendus consequatur quibusdam optio expedita praesentium est adipisci dolorem ut
-										eius!</p>
-								</blockquote>
-								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo vel ad consectetur ut aperiam. Itaque eligendi natus aperiam? Excepturi repellendus consequatur quibusdam optio expedita praesentium est adipisci dolorem ut eius!</p>
+								{{ object.description }}
+								<br>
+								{{ object.content | safe }}
 							</div>
 							<div class="single-post-meta">
 								<div class="row justify-content-center">
 									<div class="col-md-6 text-center text-md-start">
 										<ul class="post-meta-tags list-unstyled list-inline">
-											<li class="list-inline-item"><a href="https://demo.gethugothemes.com/bookworm/site/tags/photography">Photography</a></li>
+											<li class="list-inline-item"><a href="/category/{{ object.category }}">{{ object.category }}</a></li>
 										</ul>
 									</div>
 									<div class="col-md-6 text-center text-md-end mt-4 mt-md-0">
@@ -105,14 +93,16 @@
 							<div class="single-post-author">
 								<div class="row text-center text-sm-start">
 									<div class="col-md-2">
-										<a href="https://demo.gethugothemes.com/bookworm/site/author/lubana-era/">
-											<img loading="lazy" decoding="async" src="/bookworm/site/images/author/author_hu376e72e235c9199766cd0ec2291cc5fb_3167_150x150_resize_q90_h2_box.webp" alt="Lubana Era" class="img-fluid" width="150" height="150" onerror="this.onerror='null',this.src='/bookworm/site/images/author/author_hu376e72e235c9199766cd0ec2291cc5fb_3167_150x150_resize_q90_box.jpg'">
+										<a href="/author/{{ object.author }}/">
+											<img loading="lazy" width="130" height="130" style="object-fit: cover;border-radius: 5px;" decoding="async" src="/uploads/{{ object.author.profile.image }}">
 										</a>
 									</div>
 									<div class="col">
 										<p class="font-primary mb-1">Written By</p>
-										<h4 class="h5"><a href="https://demo.gethugothemes.com/bookworm/site/author/lubana-era/" class="text-dark font-weight-700">Lubana Era</a></h4>
-										<p class="font-primary">Maecenas sit amet purus eget ipsum elementum venenatis. Aenean maximus urna magna elementum venenatis, quis rutrum mi semper non purus eget ipsum elementum venenatis.</p>
+										<h4 class="h5">
+											<a href="/author/{{ object.author }}/" class="text-dark font-weight-700">{{ object.author }}</a>
+										</h4>
+										<p class="font-primary">{{ object.author.profile.bio }}</p>
 										<ul class="social-links list-unstyled list-inline ms-0 ms-sm-n2">
 											<li class="list-inline-item">
 												<a href="https://facebook.com">
@@ -176,8 +166,8 @@
 												<ul class="card-meta list-inline mb-2">
 													<li class="list-inline-item mb-2">
 														<a href="https://demo.gethugothemes.com/bookworm/site/author/lubana-era/" class="card-meta-author">
-															<img loading="lazy" decoding="async" src="/bookworm/site/images/author/author_hu376e72e235c9199766cd0ec2291cc5fb_3167_26x26_resize_q90_h2_box.webp" alt="Lubana Era" class="img-fluid" width="26" height="26" onerror="this.onerror='null',this.src='/bookworm/site/images/author/author_hu376e72e235c9199766cd0ec2291cc5fb_3167_26x26_resize_q90_box.jpg'">
-															<span>Lubana Era</span>
+															<img loading="lazy" decoding="async" src="{{ object.author.profile.image }}">
+															<span>{{ object.author }}</span>
 														</a>
 													</li>
 													<li class="list-inline-item mb-2">
