Adding PostDetailView and update templates

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -11,6 +11,9 @@
     <link rel="stylesheet" href="/static/css/style.min.css">
     {% block head %}
     {% endblock %}
+    <style>
+        img {filter: contrast(1.2);}
+    </style>
 </head>
 <body>
     {% include './includes/header.html' %}
