--- a/blog/templates/blog/includes/header.html
+++ b/blog/templates/blog/includes/header.html
@@ -25,28 +25,28 @@
                     <div class="collapse navbar-collapse" id="navHeader">
                         <ul class="navbar-nav mx-auto">
                             <li class="nav-item">
-                                <a class="nav-link" href="https://demo.gethugothemes.com/bookworm/site/about/">Home</a>
+                                <a class="nav-link" href="/">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="https://demo.gethugothemes.com/bookworm/site/about/">About</a>
+                                <a class="nav-link" href="/about/">About</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="https://demo.gethugothemes.com/bookworm/site/contact/">Contact</a>
+                                <a class="nav-link" href="/contact/">Contact</a>
                             </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle d-inline-block" href="#" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     Categories
                                 </a>
                                 <div class="dropdown-menu">
-                                    <a class="dropdown-item" href="#">Architecture</a>
-                                    <a class="dropdown-item" href="#">Book reviews</a>
-                                    <a class="dropdown-item" href="#">Design patterns</a>
-                                    <a class="dropdown-item" href="#">Guides & Tutorials</a>
+                                    <a class="dropdown-item" href="/category/architecture">Architecture</a>
+                                    <a class="dropdown-item" href="/category/book-reviews">Book reviews</a>
+                                    <a class="dropdown-item" href="/category/design-patterns/">Design patterns</a>
+                                    <a class="dropdown-item" href="/category/guides-and-tutorials/">Guides & Tutorials</a>
                                     <a class="dropdown-item" href="/category/">Go to Categories</a>
                                 </div>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="https://demo.gethugothemes.com/bookworm/site/about/">Tags</a>
+                                <a class="nav-link" href="/tags/">Tags</a>
                             </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle d-inline-block" href="#" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -76,4 +76,4 @@
         </div>
     </div>
 </header>
-<br><br><br><br>
+<br><br><br><br> <!-- TODO -->
