--- a/blog/templates/blog/includes/title.html
+++ b/blog/templates/blog/includes/title.html
@@ -2,10 +2,12 @@
     <div class="container">
         <div class="row">
             <div class="col-8 mx-auto text-center">
-                <h3 class="mb-3 text-dark font-weight-bold">Contact</h3>
+                <h3 class="mb-3 text-dark font-weight-bold">{{ section_name }}</h3>
                 <ul class="list-inline breadcrumb-menu">
                     <li class="list-inline-item"><a href="/">Home</a></li>
-                    <li class="list-inline-item">/ &nbsp; <a href="/contact/">Contact</a></li>
+                    {% for section in sections %}
+                        <li class="list-inline-item">/ &nbsp; <a href='{{ section.url }}'>{{ section.name }}</a></li>
+                    {% endfor %}
                 </ul>
             </div>
         </div>
