--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -99,7 +99,7 @@
                                                                         class="img-fluid"
                                                                         width="26"
                                                                         height="26"
-                                                                        onerror="this.onerror='null',this.src='/bookworm/site/images/author/author_hu376e72e235c9199766cd0ec2291cc5fb_3167_26x26_resize_q90_box.jpg'"
+                                                                        onerror="this.onerror='null',this.src=''"
                                                                     />
                                                                     <span>{{ post.author.get_full_name }}</span>
                                                                 </a>
