--- a/blog/templates/blog/contact.html
+++ b/blog/templates/blog/contact.html
@@ -2,7 +2,7 @@
 
 {% block head %}
 	<title>Contact - Orión B Blog</title>
-	<meta name="description" content="Send me a message!">
+	<meta name="description" content="Contact page.">
 {% endblock %}
 
 {% block content %}
