Updating header urls

--- a/blog/templates/blog/includes/header.html
+++ b/blog/templates/blog/includes/header.html
@@ -40,8 +40,8 @@
                                 <div class="dropdown-menu">
                                     <a class="dropdown-item" href="/category/architecture">Architecture</a>
                                     <a class="dropdown-item" href="/category/book-reviews">Book reviews</a>
-                                    <a class="dropdown-item" href="/category/design-patterns/">Design patterns</a>
-                                    <a class="dropdown-item" href="/category/guides-and-tutorials/">Guides & Tutorials</a>
+                                    <a class="dropdown-item" href="/category/design-patterns">Design patterns</a>
+                                    <a class="dropdown-item" href="/category/guides-and-tutorials">Guides & Tutorials</a>
                                     <a class="dropdown-item" href="/category/">Go to Categories</a>
                                 </div>
                             </li>
@@ -53,7 +53,7 @@
                                     Other
                                 </a>
                                 <div class="dropdown-menu">
-                                    <a class="dropdown-item" href="/authors/">Authors</a>
+                                    <a class="dropdown-item" href="/author/">Authors</a>
                                     <a class="dropdown-item" href="/privacy/">Privacy</a>
                                     <a class="dropdown-item" href="/terms-and-conditions/">Terms & Conditions</a>
                                 </div>
