--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -51,13 +51,13 @@
                                                     <li class="list-inline-item mb-2">
                                                         <ul class="card-meta-tag list-inline">
                                                             {% for tag in post.tags %}
-                                                                <li class="list-inline-item"><a href="/tags/{{ tag | lower }}/">{{ tag }}</a></li>
+                                                                <li class="list-inline-item"><a href="/tags/{{ tag | lower }}">{{ tag }}</a></li>
                                                             {% endfor %}
                                                         </ul>
                                                     </li>
                                                 </ul>
                                                 <h3 class="h4 mb-3">
-                                                    <a class="post-title" href="/post/{{ post.id }}/">{{ post.title }}</a>
+                                                    <a class="post-title" href="/post/{{ post.id }}">{{ post.title }}</a>
                                                 </h3>
                                                 <p>{{ post.description }}</p>
                                                 <a href="/post/{{ post.id }}" aria-label="Read Article">Read Article <i class="fas fa-angle-right"></i></a>
