--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -9,6 +9,7 @@
     <meta name="author" content="Themefisher">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Mulish:wght@500;600;700;800;900&amp;display=swap" media="all">
     <link rel="stylesheet" href="/static/css/style.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/turbolinks/5.2.0/turbolinks.js"></script>
     {% block head %}
     {% endblock %}
     <style>
