Adding comments.html and post_recommended.html and update sidebar

--- a/blog/templates/blog/includes/sidebar.html
+++ b/blog/templates/blog/includes/sidebar.html
@@ -21,7 +21,7 @@
             <ul class="list-inline widget-list widget-list-inline taxonomies-list">
                 {% for tag in object.tags %}
                     <li class="list-inline-item">
-                        <a href="/tags/{{ tag }}">{{ tag }}</a>
+                        <a href="/tags/{{ tag }}">{{ tag | title }}</a>
                     </li>
                 {% endfor%}
                 <br>
