Adding recommended posts in post detail

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -26,7 +26,7 @@
         
     {% include './includes/footer.html' %}
 
-    <script src="static/js/jquery.min.js"></script>
+    <script src="/static/js/jquery.min.js"></script>
     <script type="application/javascript">
         WebFont.load({google:{api:'https://fonts.googleapis.com/css2',families:['Mulish:wght@500;600;700;800;900&display=swap'],version:2},active:()=>{sessionStorage.fontsLoaded=!0}})
     </script>
