--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -109,7 +109,7 @@
                                                             </li>
                                                             <li class="list-inline-item mb-2">
                                                                 <ul class="card-meta-tag list-inline">
-                                                                    <li class="list-inline-item"><a href="/category/{{ post.category | lower }}">{{ post.category }}</a></li>
+                                                                    <li class="list-inline-item"><a href="/category/{{ post.category | lower }}">{{ post.category | title }}</a></li>
                                                                 </ul>
                                                             </li>
                                                         </ul>
