--- a/blog/templates/blog/category_list.html
+++ b/blog/templates/blog/category_list.html
@@ -84,10 +84,10 @@
                                                     </li>
                                                 </ul>
                                                 <h3 class="h4 mb-3">
-                                                    <a class="post-title" href="/post/{{ post.id }}">{{ post.title }}</a>
+                                                    <a class="post-title" href="/post/{{ post.url }}">{{ post.title }}</a>
                                                 </h3>
                                                 <p>{{ post.description }}</p>
-                                                <a href="/post/{{ post.id }}" aria-label="Read Article">Read Article <i class="fas fa-angle-right"></i></a>
+                                                <a href="/post/{{ post.url }}" aria-label="Read Article">Read Article <i class="fas fa-angle-right"></i></a>
                                             </div>
                                         </div>
                                     </div>
