Updating templates and css

--- a/blog/templates/blog/author_detail.html
+++ b/blog/templates/blog/author_detail.html
@@ -43,14 +43,14 @@
                                         <div class="pr-0 pr-lg-5">
                                             <div class="post-slider slider-sm rounded mb-4 mb-lg-0 slick-initialized slick-slider">
                                                 <div class="slick-list draggable">
-                                                    <div class="slick-track" style="opacity: 1; width: 527px; transform: translate3d(0px, 0px, 0px);">
+                                                    <div class="slick-track" style="opacity: 1;transform: translate3d(0px, 0px, 0px);">
                                                         <img
                                                             loading="lazy"
                                                             decoding="async"
                                                             class="w-100"
                                                             src="/uploads/{{ post.image }}"
                                                             alt="post-thumb"
-                                                            style="width: 970px; height: 360px; object-fit: cover;"
+                                                            style="height: 360px; object-fit: cover;"
                                                         />
                                                     </div>
                                                 </div>
