--- a/blog/templates/blog/author_list.html
+++ b/blog/templates/blog/author_list.html
@@ -29,7 +29,7 @@
 								decoding="async"
 								src="/uploads/{{ user.profile.image }}"
 								alt="User {{ user }}"
-								class="img-fluid rounded"
+								class="img-profile rounded"
 								width="150"
 								height="150"
 								onerror="this.onerror='null',this.src=''"
