--- a/blog/templates/blog/includes/footer.html
+++ b/blog/templates/blog/includes/footer.html
@@ -29,7 +29,7 @@
                     <li class="list-inline-item mx-3"><a href="/privacy/">Privacy</a></li>
                     <li class="list-inline-item mx-3"><a href="/terms-and-conditions/">Terms &amp; Conditions</a></li>
                 </ul>
-                <p class="mb-0 font-weight-500 copyright-text content">© Copyright by Orión B</p>
+                <p class="mb-0 font-weight-500 copyright-text">© Copyright by Orión B</p>
             </div>
         </div>
     </div>
