--- a/blog/templates/blog/includes/post_recommended.html
+++ b/blog/templates/blog/includes/post_recommended.html
@@ -3,8 +3,10 @@
         <article class="card post-card">
             <div class="post-slider slider-sm rounded mb-4 slick-initialized slick-slider">
                 <div class="slick-list draggable">
-                    <div class="slick-track" style="opacity: 1; width: 472px; transform: translate3d(0px, 0px, 0px);">
-                        <picture class="slick-slide slick-current slick-active" data-slick-index="0" aria-hidden="false" tabindex="0" style="width: 472px;">
+                    <!-- <div class="slick-track" style="opacity: 1; width: 472px; transform: translate3d(0px, 0px, 0px);"> -->
+                    <div class="slick-track" style="opacity: 1; transform: translate3d(0px, 0px, 0px);">
+                        <!-- <picture class="slick-slide slick-current slick-active" data-slick-index="0" aria-hidden="false" tabindex="0" style="width: 472px;"> -->
+                            <picture class="slick-slide slick-current slick-active" data-slick-index="0" aria-hidden="false" tabindex="0">
                             <img loading="lazy" decoding="async" class="w-100 h-auto" src="/uploads/{{ post.image }}" alt="post-thumb" width="970" height="500">
                         </picture>
                     </div>
