--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,5 +1,15 @@
 .content {
-    color: #3e3e3e;
-    font-size: 18px;
-    font-weight: bold;
+    color: #2d2d2d;
+    font-size: 20px;
+}
+
+.img-profile {
+    max-width: 100%;
+    object-fit: cover;
+}
+
+.card-meta .card-meta-author img {
+    width: 40px;
+    height: 40px;
+    object-fit: cover;
 }
