Adding /tag/ endpoint and view, Updating category_list and search_list html title

--- a/blog/templates/blog/search_list.html
+++ b/blog/templates/blog/search_list.html
@@ -1,7 +1,7 @@
 {% extends './base.html' %}
 
 {% block head %}
-	<title>Contact - Orión B Blog</title>
+	<title>Search - Orión B Blog</title>
 	<meta name="description" content="Contact page.">
 {% endblock %}
 
